--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
-Flask==2.1.2
+Flask==3.0.3
 Flask-PyMongo==2.3.0
 Flask-Bcrypt==1.0.1
-Flask-CORS==3.0.10
-pymongo==4.1.1
-python-dotenv==0.21.0
+Flask-CORS==5.0.0
+pymongo==4.10.1
+python-dotenv==1.0.1
+PyJWT==2.9.0
+alpaca-py==0.31.0
